--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1188,8 +1188,12 @@ h4 {
 .footer__container-column {
     display: flex;
     flex-direction: column;
-    width: 33%;
+    width: 69%;
     margin-right: 20px;
+}
+
+.footer__container-column:first-child {
+    width: 72%;
 }
 
 .footer__container-column img {
@@ -1221,6 +1225,10 @@ h4 {
 .footer__social-item i {
     transform: skewX(15deg);
     display: inline-block;
+}
+
+.footer__container-column-wrap {
+    display: flex;
 }
 
 .footer__container-column-item {
