news section desktop fix, mobile adaptive

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -600,6 +600,15 @@ h4 {
     width: 100%;
 }
 
+.news__main-item-background {
+    background-image: url("../img/news-1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    width: 100%;
+    height: 100%;
+}
+
 .news__main-item img {
     width: 100%;
     height: 100%;
@@ -633,22 +642,73 @@ h4 {
     display: flex;
 }
 
+.news__row-item-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
 .news__row-item {
     flex-direction: column;
     margin-right: 15px;
     position: relative;
 }
 
-.news__row-item > h4 {
+.news__row-item-wrap:nth-child(1) {
+    padding-right: 15px;
+}
+
+.news__row-item-wrap:nth-child(2) {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.news__row-item-wrap:nth-child(3) {
+    padding-left: 15px;
+}
+
+.news__row-item-wrap:nth-child(1) .news__row-item {
+    background-image: url("../img/news-3.jpg");
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 166px;
+    width: 100%;
+}
+
+.news__row-item-wrap:nth-child(2) .news__row-item {
+    background-image: url("../img/news-4.jpg");
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 166px;
+    width: 100%;
+}
+
+.news__row-item-wrap:nth-child(3) .news__row-item {
+    background-image: url("../img/news-2.jpg");
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 166px;
+    width: 100%;
+}
+
+
+
+.news__row-item-content {
+    padding-top: 10px;
+}
+
+.news__row-item-content > h4 {
     margin-top: 10px;
     margin-left: 0px;
 }
 
-.news__row-item > h4:hover {
+.news__row-item-content > h4:hover {
     cursor: pointer;
 }
 
-.news__row-item > .news__item-date {
+.news__row-item-content > .news__item-date {
     margin-left: 0px;
 }
 
