--- a/css/mobile.css
+++ b/css/mobile.css
@@ -119,6 +119,10 @@
         padding: 0;
     }
 
+    .news__menu .fa-chevron-left {
+        margin-left: 68px;
+    }
+
     .news__menu i {
         display: inline-block;
     }
@@ -137,8 +141,8 @@
 
     .news__container {
         flex-direction: column;
-        padding-right: 36px;
-        padding-left: 36px;
+        padding-right: 15px;
+        padding-left: 15px;
         margin-right: auto;
         margin-left: auto;
         max-width: 720px;
@@ -170,15 +174,32 @@
         margin-bottom: 20px;
     }
 
-    .news__row-item {
-        display: flex;
-        width: 220px;
-        margin-right: 30px;
+    .news__row {
+        flex-direction: column;
     }
 
-    .news__row img {
-        width: 211px;
-        height: 166px;
+    .news__row-item {
+        display: flex;
+        width:auto;
+        margin-right: auto;
+    }
+
+    .news__row-item-wrap {
+        margin-bottom: 20px;
+    }
+
+    .news__row-item-wrap:nth-child(1) {
+        padding-right: 0;
+    }
+    
+    .news__row-item-wrap:nth-child(2) {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    
+    .news__row-item-wrap:nth-child(3) {
+        padding-left: 0;
+        margin-bottom: 0;
     }
 
     .news__item-date {
