--- a/css/mobile.css
+++ b/css/mobile.css
@@ -164,8 +164,8 @@
 
     .news__right-column {
         width: auto;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 0;
+        padding-right: 0;
         padding-top: 40px;
     }
 
@@ -223,23 +223,23 @@
     }
 
     .news__social > ul > li:nth-child(1) > span:last-child {
-        margin-left: 442px;
+        margin-left: 102px;
     }
 
     .news__social > ul > li:nth-child(2) > span:last-child {
-        margin-left: 470px;
+        margin-left: 127px;
     }
 
     .news__social > ul > li:nth-child(3) > span:last-child {
-        margin-left: 459px;
+        margin-left: 116px;
     }
 
     .news__social > ul > li:nth-child(4) > span:last-child {
-        margin-left: 443px;
+        margin-left: 101px;
     }
 
     .news__social ul {
-        padding: 0;
+        padding-left: 22px;
     }
 
     .news__social-icon {
