--- a/css/mobile.css
+++ b/css/mobile.css
@@ -265,16 +265,34 @@
         margin-bottom: 40px;
     }
 
+    .guide {
+        height: auto;
+    }
+
+    .guide__header {
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+    }
+
+    .guide__header h3 {
+        margin-bottom: 30px;
+    }
+
     .guide__container {
-        max-width: 1024px;
-        padding-right: 36px;
-        padding-left: 36px;
+        max-width: 748px;
+        padding-right: 15px;
+        padding-left: 15px;
         margin-left: auto;
         margin-right: auto;
     }
 
     .guide__menu {
         margin-left: 0;
+        padding-left: 0;
+    }
+
+    .guide__menu li {
+        margin-right: 5px;
     }
 
     .guide__row h4 {
@@ -285,53 +303,91 @@
         margin-right: 35px;
     }
 
+    .guide__row {
+        flex-wrap: wrap;
+    }
+
     .guide__row-first-item{
         background-size: cover;
         background-position: top center;
+        width: 120%;
+        margin-right: -8px;
+        margin-left: -8px;
+        margin-bottom: 15px;
     }
 
     .guide__row-second-item {
         background-size: cover;
         background-position: top center;
+        width: 120%;
+        margin-right: -8px;
+        margin-left: -8px;
+        margin-bottom: 15px;
     }
 
     .guide__row-third-item {
         margin-right: 15px;
         background-size: cover;
         background-position: top center;
+        width: 120%;
+        margin-right: -8px;
+        margin-left: -8px;
+        margin-bottom: 15px;
     }
 
     .guide__row-fourth-item {
         margin-right: 15px;
         background-size: cover;
         background-position: top center;
+        width: 120%;
+        margin-right: -8px;
+        margin-left: -8px;
+        margin-bottom: 15px;
     }
 
     .guide__row-fifth-item {
         background-size: cover;
         background-position: top center;
+        width: 120%;
+        margin-right: -8px;
+        margin-left: -8px;
+        margin-bottom: 15px;
     }
 
     .instagram {
         height: auto;
+        padding-top: 0;
     }
 
     .instagram__container {
         flex-direction: column;
         height: auto;
-        max-width: 720px;
-        padding-left: 36px;
-        padding-right: 36px;
+        max-width: 748px;
+        padding-left: 15px;
+        padding-right: 15px;
         margin-left: auto;
         margin-right: auto;
     }
 
+    .instagram__left-column {
+        margin-right: 0;
+    }
+
+    .instagram__left-column-item {
+        flex-direction: column;
+    }
+
     .instagram__left-column-item img {
         margin-right: 30px;
+        width: 100%;
     }
 
     .instagram__left-column-item-content .menu-spec {
         margin-bottom: 10px;
+        margin-left: 5px;
+        margin-top: 30px;
+}
+
     }
 
     .instagram__left-column-item-content .instagram__item-date {
@@ -341,6 +397,7 @@
 
     .instagram__left-column-item-content h3 {
         letter-spacing: 0.5px;
+        margin-bottom: 20px;
     }
 
     .instagram__left-column-navigation {
@@ -354,6 +411,7 @@
 
     .instagram__right-column-tabletwrap {
         display: flex;
+        flex-direction: column;
     }
 
     .instagram__right-column-tabletwrap-left {
@@ -364,7 +422,7 @@
     .instagram__right-column-tabletwrap-right {
         display: flex;
         flex-direction: column;
-        margin-left: 20px;
+        margin-left: 0;
     }
 
     .instagram__right-column-tabletwrap-middle {
@@ -374,13 +432,13 @@
     }
 
     .instagram__right-column-item img {
-    width: calc(50% - 10px);
+    width: calc(45% - 10px);
     max-width: 100%;
     }
 
     .instagram__right-column-item {
     width: 400px;
-    height: 400px;
+    height: auto;
     }
 
     .instagram__right-column-container {
@@ -405,7 +463,7 @@
 
     .instagram__subscribe {
         max-width: 231px;
-        padding-left: 151px;
+        padding: 15px 0 15px 133px;
     }
 
     .footer-section {
@@ -413,23 +471,28 @@
     }
 
     .footer__container {
-        padding-left: 39px;
+        padding-left: 15px;
         padding-right: 15px;
-        max-width: 720px;
+        max-width: 748px;
         flex-direction: column;
     }
 
     .footer__container-column {
-        width: 56%;
+        width: 100%;
     }
 
     .footer__container > .footer__container-column:first-child {
         width: auto;
     }
 
+    .footer__container-column:first-child {
+        width: 100%;
+    }
+
     .footer__container-column-wrap {
         display: flex;
         margin-top: 20px;
+        flex-direction: column;
     }
 
     .footer__container-column-item-content {
